--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
+    "@types/prop-types": "^15.7.14",
     "@types/react": "^19.0.11",
     "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "^5.3.3",
@@ -44,6 +45,9 @@
     ]
   },
   "devDependencies": {
-    "react-icons": "^5.5.0"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^3.4.17"
   }
 }
