--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,5 +49,6 @@
     "postcss": "^8.5.3",
     "react-icons": "^5.5.0",
     "tailwindcss": "^3.4.17"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
