--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@types/react": "^19.0.11",
     "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.8.4",
+    "http-proxy-middleware": "^3.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
@@ -49,6 +51,5 @@
     "postcss": "^8.5.3",
     "react-icons": "^5.5.0",
     "tailwindcss": "^3.4.17"
-  },
-  "proxy": "http://localhost:4000"
+  }
 }
